[package]
name = "jobclock"
version = "1.0.1"
edition = "2021"
license = "MIT"
description = "A simple time tracking tool"
readme = "README.md"
repository = "https://github.com/johansolbakken/jobclock"
keywords = ["time", "tracking", "tool", "cli"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.35", features = ["serde"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
